--- a/Assets/style.css
+++ b/Assets/style.css
@@ -36,27 +36,37 @@
 }
 
 li {
-  margin: 5px;
-  padding-left: 3rem;
+  margin: 10px;
   list-style: none;
   font-family: "Poppins", sans-serif;
   font-family: "Teko", sans-serif;
+  font-size: 2rem;
+}
+
+#position {
+  font-size: 3rem;
+  padding: 1.5rem 1.5rem 0rem 1.5rem;
+}
+
+#name {
+  font-size: 3rem;
+  padding: 0.25rem 1.5rem 1.5rem 1.5rem;
 }
 
 #cardBody {
-  margin-top: 0;
-  background-color: aliceblue;
-}
-
-#card {
-  border-style: solid;
-  border-radius: 2px;
+  background-color:darkgrey;
+  padding: 20px;
+  border-radius: 3px;
 }
 
 #card-header {
   margin-top: 0;
+  border-radius: 3px;
 }
 
 #header {
-font-size: 5rem;
+  font-size: 6rem;
+  margin: 4rem;
+  font-family: "Poppins", sans-serif;
+  font-family: "Teko", sans-serif;
 }
